# pacote_python

./: pyproject.toml
