[tool.poetry]
name = "pacote-python"
version = "0.1.0"
description = ""
authors = ["Fasri <106215404+Fasri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
